Commit N3. First start. All works.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
 agp = "8.7.3"
-hiltCompiler = "2.49"
-kotlin = "2.1.0"
+hiltCompiler = "2.51.1"
+hiltCompilerVersion = "1.2.0"
+kotlin = "1.9.23"
 coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -12,9 +13,11 @@ activity = "1.9.3"
 constraintlayout = "2.2.0"
 lottie = "6.6.0"
 navigation = "2.8.4"
-dagger = "2.52"
+#dagger = "2.52"
+dagger = "2.51.1"
 lifecycle = "2.8.7"
-ksp = "2.0.21-1.0.27"
+#ksp = "2.0.21-1.0.27"
+ksp = "1.9.23-1.0.20"
 firebase-crashlytics-gradle = "3.0.2"
 gms-googleServices = "4.4.2"
 kotlinx-coroutines = "1.9.0-RC.2"
@@ -26,10 +29,12 @@ glide = "4.16.0"
 paging = "3.3.4"
 room = "2.6.1"
 baselibrary = "3.2.0-alpha11"
-kotlin-parcelize = "2.1.0"
+kotlin-parcelize = "1.9.23"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-hilt-common = { module = "androidx.hilt:hilt-common", version.ref = "hiltCompilerVersion" }
+androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompilerVersion" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltCompiler" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -83,4 +88,5 @@ room = { id = "androidx.room", version.ref = "room" }
 
 firebase-crashlitycs = { id = "com.google.firebase.crashlytics", version.ref = "firebase-crashlytics-gradle" }
 gms-googleServices = { id = "com.google.gms.google-services", version.ref = "gms-googleServices" }
+
 
