--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ paging = "3.3.4"
 room = "2.6.1"
 baselibrary = "3.2.0-alpha11"
 kotlin-parcelize = "1.9.23"
+firebaseStorage = "21.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -74,6 +75,7 @@ glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "gl
 paging = {group = "androidx.paging", name = "paging-runtime", version.ref = "paging"}
 room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 androidx-baselibrary = { group = "androidx.databinding", name = "baseLibrary", version.ref = "baselibrary" }
+firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
