--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,8 @@ material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
 lottie = "6.6.0"
-navigation = "2.8.4"
+navigation = "2.7.7"
+#navigation = "2.8.4"
 #dagger = "2.52"
 dagger = "2.51.1"
 lifecycle = "2.8.7"
@@ -31,11 +32,13 @@ room = "2.6.1"
 baselibrary = "3.2.0-alpha11"
 kotlin-parcelize = "1.9.23"
 firebaseStorage = "21.0.1"
+firebaseDatabase = "21.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-hilt-common = { module = "androidx.hilt:hilt-common", version.ref = "hiltCompilerVersion" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompilerVersion" }
+androidx-navigation-safe-args-gradle-plugin = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navigation" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltCompiler" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -76,6 +79,7 @@ paging = {group = "androidx.paging", name = "paging-runtime", version.ref = "pag
 room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 androidx-baselibrary = { group = "androidx.databinding", name = "baseLibrary", version.ref = "baselibrary" }
 firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
+firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
